@@ -82,6 +82,8 @@ DEFAULTS = {
     'PAGE_WIZARD_CONTENT_PLUGIN_BODY': 'body',
     'PAGE_WIZARD_CONTENT_PLACEHOLDER': None,  # Use first placeholder it finds.
     'SIDEFRAME_ENABLED': True,
+    'ENDPOINT_LIVE_URL_QUERYSTRING_PARAM_ENABLED': False,
+    'ENDPOINT_LIVE_URL_QUERYSTRING_PARAM': "live-url",
 }
 
 
